--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,3 +35,16 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0-rc02'
 
 }
+
+// Fix startup problems linked with support lib and build tools
+// Source: https://github.com/facebook/flipper/issues/146#issuecomment-403691747
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == "com.android.support") {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "26.+"
+            }
+        }
+    }
+}
